--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -88,3 +88,15 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+
+#statistic-map {
+    height: 40em;
+    margin: 0 auto;
+}
+
+.loading {
+    margin-top: 10em;
+    text-align: center;
+    color: gray;
+}
